build(core): set engines and files
Signed-off-by: Guillaume Bonnet <mrsquaare@mrsquaare.fr>

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,12 +2,18 @@
   "name": "@go-for-it/core",
   "version": "0.0.0",
   "type": "module",
+  "engines": {
+    "node": ">=22"
+  },
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
       "import": "./dist/index.js"
     }
   },
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "dev": "tsdown --watch",
     "build": "tsdown",
