--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -2,9 +2,15 @@
   "name": "@go-for-it/cli",
   "version": "0.0.0",
   "type": "module",
+  "engines": {
+    "node": ">=22"
+  },
   "bin": {
     "go-for-it": "./dist/index.js"
   },
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "dev": "tsdown --watch",
     "build": "tsdown",
