chore: add type-check script
Signed-off-by: Guillaume Bonnet <mrsquaare@mrsquaare.fr>

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -19,6 +19,7 @@
     "build": "tsdown",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
+    "type-check": "tsc --noEmit",
     "clean": "del-cli dist/"
   },
   "devDependencies": {
