build(cli): add gfi as bin
Signed-off-by: Guillaume Bonnet <mrsquaare@mrsquaare.fr>

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -6,7 +6,8 @@
     "node": ">=22"
   },
   "bin": {
-    "go-for-it": "./dist/index.js"
+    "go-for-it": "./dist/index.js",
+    "gfi": "./dist/index.js"
   },
   "files": [
     "dist"
