--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -30,5 +30,8 @@
     "globals": "^16.3.0",
     "tsdown": "^0.14.1",
     "typescript": "^5.9.2"
+  },
+  "dependencies": {
+    "defu": "^6.1.4"
   }
 }
