--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -6,8 +6,8 @@
     "node": ">=22"
   },
   "bin": {
-    "go-for-it": "./dist/index.js",
-    "gfi": "./dist/index.js"
+    "go-for-it": "./dist/cli.js",
+    "gfi": "./dist/cli.js"
   },
   "files": [
     "dist"
