--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -24,6 +24,7 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "type-check": "tsc --noEmit",
+    "test": "vitest",
     "clean": "del-cli dist/"
   },
   "dependencies": {
@@ -43,6 +44,7 @@
     "eslint": "^9.34.0",
     "globals": "^16.3.0",
     "tsdown": "^0.14.1",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "vitest": "^3.2.4"
   }
 }
