--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -40,10 +40,12 @@
     "@types/node": "^22.17.2",
     "@types/react": "^19.1.11",
     "@types/yargs": "^17.0.33",
+    "cli-testing-library": "^3.0.1",
     "del-cli": "^6.0.0",
     "eslint": "^9.34.0",
     "globals": "^16.3.0",
     "tsdown": "^0.14.1",
+    "tsx": "^4.20.5",
     "typescript": "^5.9.2",
     "vitest": "^3.2.4"
   }
