--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,4 +2,8 @@ packages:
   - packages/*
 
 onlyBuiltDependencies:
+  - esbuild
   - unrs-resolver
+
+patchedDependencies:
+  cli-testing-library@3.0.1: patches/cli-testing-library@3.0.1.patch
