chore: run vitest without watch mode
Signed-off-by: Guillaume Bonnet <mrsquaare@mrsquaare.fr>

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -24,7 +24,7 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "type-check": "tsc --noEmit",
-    "test": "vitest",
+    "test": "vitest run",
     "clean": "del-cli dist/"
   },
   "dependencies": {
