--- a/turbo.json
+++ b/turbo.json
@@ -22,6 +22,9 @@
     "type-check": {
       "cache": false
     },
+    "test": {
+      "cache": false
+    },
     "clean": {
       "cache": false,
       "outputs": [
