--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -40,7 +40,7 @@
     "@types/node": "^22.17.2",
     "@types/react": "^19.1.11",
     "@types/yargs": "^17.0.33",
-    "cli-testing-library": "^3.0.1",
+    "cli-testing-library": "3.0.1",
     "del-cli": "^6.0.0",
     "eslint": "^9.34.0",
     "globals": "^16.3.0",
